@@ -144,3 +144,4 @@ list, please point out.
 * syrius.ml@no-log.org: A bug report.
 * Tim Hermans: A bug report.
 * Anthony M. Martinez: Helped SASL options support
+* ilusi0n.x: A bug report.
